<resources>
    <string name="app_name">Discipline Bee</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="tutorial_title_1">Self control - make it a habit</string>
    <string name="tutorial_title_2">Just 15 minutes a day</string>
    <string name="tutorial_title_3">Assign a task to your session</string>
    <string name="tutorial_title_4">No work outside the session</string>
    <string name="tutorial_title_5">Give your future self a name</string>
    <string name="tutorial_text_1">Do you want to get things done in time? Do you want to feel the joy of making good use of
your time?
        \n\nWorking on tasks with self-discipline should become a routine and not feel like a struggle.
        \n\n<b>That is the aim of this app!</b></string>
    <string name="tutorial_text_2">In order to become a habit, we designed this app as an 8-step training program: <b>We start
        with a very easy first step:</b>
\n\nFor the whole first week you will set a maximum of one session per day (the session for the
first week is a 15 minute timeframe of concentrated work).</string>
    <string name="tutorial_text_3">After this introduction the calendar will open: Just set your session for the first week and
assign a task (what do you want to achieve during this session). The app is going to remind
you 1 minute before your session is going to start.</string>
    <string name="tutorial_text_4">The <b>most important exercise</b> of the first week is to work <b>ONLY during your sessions</b> on
your tasks. Before and after the session you are going to do whatever you want, but do not
work on your tasks outside the sessions.
\n\nThe first week should be easy to you and you will be surprised how much you are going to
accomplish in 15 minutes of concentrated work!</string>
    <string name="tutorial_text_5">Take a moment to imagine your future self. What will it be like to be a person who is in control of his/her time and being able accomplishes his/her tasks?\n</string>
    <string name="give_your_future_self_name">Give your futures self a name:</string>
    <string name="bee">Bee</string>
    <string name="done">Done</string>
    <string name="overview">Overview</string>
    <string name="calendar">Calendar</string>
    <string name="advice">Advice</string>
    <string name="reset_all_data">Reset all data</string>
    <string name="reset_this_level">Reset this level</string>
    <string name="are_you_sure_reset_data">All your data will be deleted. Are you sure you want to reset data?</string>
    <string name="are_you_sure_reset_level">All your data in this level will be deleted. You will be able to start this level again next week. Are you sure you want to reset this level?</string>
    <string name="your_next_pomodoro">Your next session \"%1$s\" starts %2$s at <b>%3$s</b></string>
    <string name="report">Report</string>
    <string name="your_progres_this_week">Your progress this week</string>
    <string name="you_have_done">So far you have finished %1$s of your sessions this week.\n Stay focus to reach the next level. (%2$s required to complete this level)</string>
    <string name="you_have_done2">So far you have done %1$s of your tasks within the set time. Try to plan realistic tasks for your sessions (%2$s required to complete this level)</string>
    <string name="you_have_done_level_0">So far you have finished %1$s of your sessions this week.</string>
    <string name="you_have_done2_level_0">So far you have done %1$s of your tasks within the set time.</string>
    <string name="advice_text_1">Take a moment to imagine your future self. What will it be like to be a person who is in control of his/her time and being able accomplishes his/her tasks? Whenever it feels hard to start a pomodoro think that your actions today are a step towards a person with self-control.</string>
    <string name="did_you_stayed_focusd">Did you stayed focused?</string>
    <string name="did_you_finish_task">Did you finish your task?</string>
    <string name="i_stayed_focused">I stayed focused</string>
    <string name="i_did_not_focused_on_my_task">I did not focus on my task</string>
    <string name="i_finished_my_task">I finished my task</string>
    <string name="i_did_not_finished_my_task">I did not finish my task</string>
    <string name="save">Save</string>
    <string name="your_pomodoro_starts_in">Your session starts in:</string>
    <string name="relax_a_moment">Get ready for your session and avoid distraction: we recommend to use the flight mode or to disable mobile data during the session.</string>
    <string name="time_left">Time left:</string>
    <string name="stay_focused_and_avoid">Stay focused and avoid distractions.</string>
    <string name="stop">Stop</string>
    <string name="alert">Alert</string>
    <string name="are_you_sure_you_want_exit">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="accomplished_pomodoros">Accomplished sessions</string>
    <string name="accomplished_tasks">Accomplished tasks</string>
    <string name="report_succ">Congratulations – you accomplished 100% of your sessions, X% of your tasks and reached Level 2 - a great step towards more self-control!</string>
    <string name="report_fail">Thanks for your hones answer! You did not accomplish the session today and you cannot pass the level this week anymore. Try a fresh start next week and make sure that you accomplish all your sessions. We are sure that you are going to accomplish 100% of them with the next try.</string>
    <string name="next_level_info">The next level will be a bit tougher: you will need assign 8-12 sessions for the whole week and you will need to accomplish 87,5% of them to reach Level 3.</string>
    <string name="good_for_planet">Reaching self-control and finishing your session is something great for you, but also think about people and nature that surrounds you. There should be some time left to do something good for this planet: engage in human rights, protect nature, etc. and don’t let advertisement fool you: material stuff is not going to make you happy.</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="this_app">This App</string>
    <string name="habits">Habits</string>
    <string name="procrastination">Procrastination</string>
    <string name="your_future_self">Your future self</string>
    <string name="meditation">Mediation</string>
    <string name="sleep">Sleep</string>
    <string name="failure">Failure</string>
    <string name="nature">Physical Exercise/Nature</string>
    <string name="nutrition">Nutrition</string>
    <string name="use_your_time">Use your time</string>
    <string name="work_together">Recommendation: Work together</string>
    <string name="references">References</string>
    <string name="pomodoro_text">The Pomodoro Technique is a time management method developed by Francesco Cirillo in the late 1980s. The technique uses a timer to break down work into intervals, separated by short breaks.
        \n(https://en.wikipedia.org/wiki/Pomodoro_Technique)\n\n

        <b>How to use the Pomodoro technique within this app:</b>
\n\t•	Choose a session in the calendar
\n\t•	Enter the task which you want to finish during your session
\n\t•	Choose a starting time for the session
\n\t•	Work on the task ONLY during your session time
\n\t•	End work when the session timer of this app rings and answer honestly
\n\t•	Consider taking a longer break after a row of four sessions.

\n\n\For more information check this link: https://www.youtube.com/watch?v=1l4w7uHdNaQ</string>
    <string name="this_app_text">The aim of this app is
	\n\t•	that you start with your work on time
	\n\t•	that you only use the session time for work
	\n\t•	that you make realistic plans about your tasks
\n\nWhen you postpone tasks, you do that because you might think you can still do the tasks later on. That is a thought we want to erase and that is why you should ONLY work on your tasks during the sessions.
\n\nFurthermore, you assign tasks to your sessions. You will give feedback if you managed to
accomplish them during the session. The report will track how often you accomplish your
tasks and that is going to help you to plan more realistically.</string>
    <string name="habits_text">Once your behavior becomes a habit you will have to invest less willpower. After this
program starting your sessions on time should be a routine like brushing your teeth. Your
reward will be that you can value your free time much more and get your tasks done in time.

\n\nReference:
\nDuhigg, Charles: The power of habit
    </string>
    <string name="procrastination_text">Procrastination is the avoidance or the postponing of tasks that need to be done. To stop procrastination, you need to learn that postponing tasks is not an option during this program.
\nThat is why you should ONLY work on your tasks during the sessions.</string>
    <string name="your_future_self_text">You need to understand that the actions you take today are going to influence who you are
going to be in the future. Therefore, take a moment to imagine how your Future-Self will look
like: Close your eyes for a few seconds to imagine that you are already that person who is
able to get tasks done:
	\n\t•	How will the Future-Self feel after achieving the goals?
	\n\t•	Will you enjoy your free time much more after having done all of your tasks?
	\n\t•	What is your Future-Self doing after having accomplished all of the tasks?

\n\nAnd now, whenever you are tempted to postpone your tasks ask yourself if it will be worth to
lose these achievements. What are you going to gain if you postpone your tasks today? Is it
a good deal to postpone and fail to become the Future-Self you just had imagined? What
would your Future-Self look and feel like if you postpone tasks today?

    \n\nReference:
        \nMcGonigal, Kelly: The Willpower Instinct, Chapter 7: Putting the future on Sale: The Economics of Instant Gratification</string>
    <string name="meditation_text">A good start to gain self-control is to arise self-awareness: It will help you to recognize when
you are making a choice, why you are doing what you do and how you feel when you resist a
temptation. Pay attention to the moment when you are making a choice:\n

	\n\t•	Which are the circumstances of your choice?
	\n\t•	What has influenced you? Can you use these circumstances to trigger a wanted behavior?
	\n\t•	Or use the circumstances to avoid a certain behavior?

        \n\nA five-minute meditation is a good training to raise some self-awareness and a good training
for your brain how to handle inner (cravings, worries, desires) and outer distractions (sounds,
sights and smells).\n

        \n\t•  Sit up straight rest your hands in your lap and try to sit still. If you feel the impulse to
move try to resist this impulse.
        \n\t•  Try to focus on your breath using the words “inhale” and “exhale” in your mind. When
you realize that your mind wanders try to bring back your focus to your breath.

        \nEven if you feel that your mind wanders and if you feel that you do not perform well on
focusing on your breath this training is still going to help you practice self-awareness and
self-control and will impact your behavior during the rest of the day.
    \n\nReference:
        \nMcGonigal, Kelly: The Willpower Instinct, Chapter 1: I will, I won’t, I want: What willpower is, and why it matters
    </string>
    <string name="feedback">Contact &amp; Legal</string>
</resources>