<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view0"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/label0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:fontFamily="@font/roboto_light"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/colorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label0">




            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view0"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/label4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/did_you_stayed_focusd"
                android:fontFamily="@font/roboto_light"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:background="@color/orange_50"
                />

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_below="@id/label4">

               <RadioGroup
                   android:id="@+id/firstGroup"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="16dp">

                   <RadioButton
                       android:id="@+id/focusedRb"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/i_stayed_focused"
                       android:fontFamily="@font/roboto_light"></RadioButton>

                   <RadioButton
                       android:id="@+id/notFocusedRb"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/i_did_not_focused_on_my_task"
                       android:fontFamily="@font/roboto_light"></RadioButton>

               </RadioGroup>


           </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/card_view1"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/label5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/did_you_finish_task"
                android:fontFamily="@font/roboto_light"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/text_color"
                android:background="@color/orange_50"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label5">

                <RadioGroup
                    android:id="@+id/secondGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <RadioButton
                        android:id="@+id/finishedRb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_finished_my_task"
                        android:fontFamily="@font/roboto_light"></RadioButton>

                    <RadioButton
                        android:id="@+id/notFinishedRb"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/i_did_not_finished_my_task"
                        android:fontFamily="@font/roboto_light"></RadioButton>

                </RadioGroup>


            </LinearLayout>
        </RelativeLayout>

    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/saveBtn"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_below="@id/card_view2"
        android:layout_margin="30dp"
        android:text="@string/save"/>


</RelativeLayout>