<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/contentRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@color/orange_50"
            android:padding="16dp">

            <TextView
                android:id="@+id/nextPomoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="6dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/your_pomodoro_starts_in"
                android:textColor="@color/text_color"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/progressContainer"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/white_circle">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:progress="0"
                android:progressDrawable="@drawable/circular" />

            <TextView
                android:id="@+id/timerTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="30sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/placeholderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressContainer"
            android:layout_centerHorizontal="true"
            android:layout_margin="30dp"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:text="@string/relax_a_moment"
            android:textColor="@color/text_color" />

        <Button
            android:id="@+id/stopBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@+id/placeholderText"
            android:layout_margin="16dp"
            android:text="@string/stop"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/resultRl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone">

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/colorPrimary"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="6dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label0">


                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view0"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/orange_50"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/did_you_stayed_focusd"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label4">

                    <RadioGroup
                        android:id="@+id/firstGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp">

                        <RadioButton
                            android:id="@+id/focusedRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/i_stayed_focused"></RadioButton>

                        <RadioButton
                            android:id="@+id/notFocusedRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/i_did_not_focused_on_my_task"></RadioButton>

                    </RadioGroup>


                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/card_view1"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/label5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@color/orange_50"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:padding="6dp"
                    android:text="@string/did_you_finish_task"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label5">

                    <RadioGroup
                        android:id="@+id/secondGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp">

                        <RadioButton
                            android:id="@+id/finishedRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/i_finished_my_task"></RadioButton>

                        <RadioButton
                            android:id="@+id/notFinishedRb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/roboto_light"
                            android:text="@string/i_did_not_finished_my_task"></RadioButton>

                    </RadioGroup>


                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/saveBtn"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/card_view2"
            android:layout_margin="30dp"
            android:text="@string/save" />


    </RelativeLayout>

</RelativeLayout>